--- a/Eagle/Eagle.vcxproj.filters
+++ b/Eagle/Eagle.vcxproj.filters
@@ -4,6 +4,18 @@
     <Filter Include="Eagle">
       <UniqueIdentifier>{2390160D-8FA4-3EBE-5826-E21DC4F93AEF}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Eagle\Events">
+      <UniqueIdentifier>{A7568AD8-93B9-197D-3C3F-52332881E5FF}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Eagle\Layers">
+      <UniqueIdentifier>{82416DE7-6EA4-FC8B-172A-3542036CC80E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platforms">
+      <UniqueIdentifier>{DDACA145-4917-56BC-9255-0762FEFE3311}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platforms\Windows">
+      <UniqueIdentifier>{17E40808-83FA-069E-CC71-92BF38C7D725}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Eagle.h" />
@@ -16,16 +28,51 @@
     <ClInclude Include="src\Eagle\EntryPoint.h">
       <Filter>Eagle</Filter>
     </ClInclude>
+    <ClInclude Include="src\Eagle\Events\ApplicationEvent.h">
+      <Filter>Eagle\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eagle\Events\Event.h">
+      <Filter>Eagle\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eagle\Events\KeyEvent.h">
+      <Filter>Eagle\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eagle\Events\MouseEvent.h">
+      <Filter>Eagle\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eagle\Layers\Layer.h">
+      <Filter>Eagle\Layers</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eagle\Layers\LayerStack.h">
+      <Filter>Eagle\Layers</Filter>
+    </ClInclude>
     <ClInclude Include="src\Eagle\Log.h">
       <Filter>Eagle</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eagle\Window.h">
+      <Filter>Eagle</Filter>
+    </ClInclude>
+    <ClInclude Include="src\EaglePCH.h" />
+    <ClInclude Include="src\Platforms\Windows\WindowsWindow.h">
+      <Filter>Platforms\Windows</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Eagle\Application.cpp">
       <Filter>Eagle</Filter>
     </ClCompile>
+    <ClCompile Include="src\Eagle\Layers\Layer.cpp">
+      <Filter>Eagle\Layers</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Eagle\Layers\LayerStack.cpp">
+      <Filter>Eagle\Layers</Filter>
+    </ClCompile>
     <ClCompile Include="src\Eagle\Log.cpp">
       <Filter>Eagle</Filter>
+    </ClCompile>
+    <ClCompile Include="src\EaglePCH.cpp" />
+    <ClCompile Include="src\Platforms\Windows\WindowsWindow.cpp">
+      <Filter>Platforms\Windows</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
