--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Eagle/vendor/ImGui"]
 	path = Eagle/vendor/ImGui
 	url = https://github.com/RaskiTech/imgui
+[submodule "Eagle/vendor/glm"]
+	path = Eagle/vendor/glm
+	url = https://github.com/g-truc/glm
