Converted Eagle to a static library

--- a/Eagle/Eagle.vcxproj.filters
+++ b/Eagle/Eagle.vcxproj.filters
@@ -16,9 +16,6 @@
     <Filter Include="Platforms">
       <UniqueIdentifier>{DDACA145-4917-56BC-9255-0762FEFE3311}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Platforms\OpenGL">
-      <UniqueIdentifier>{719BB998-5D94-D8EA-86C6-BD6F721EB8F6}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Platforms\Windows">
       <UniqueIdentifier>{17E40808-83FA-069E-CC71-92BF38C7D725}</UniqueIdentifier>
     </Filter>
@@ -68,9 +65,6 @@
       <Filter>Eagle</Filter>
     </ClInclude>
     <ClInclude Include="src\EaglePCH.h" />
-    <ClInclude Include="src\Platforms\OpenGL\ImGuiOpenGLRenderer.h">
-      <Filter>Platforms\OpenGL</Filter>
-    </ClInclude>
     <ClInclude Include="src\Platforms\Windows\WindowsInput.h">
       <Filter>Platforms\Windows</Filter>
     </ClInclude>
@@ -81,6 +75,9 @@
   <ItemGroup>
     <ClCompile Include="src\Eagle\Application.cpp">
       <Filter>Eagle</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Eagle\ImGui\ImGuiBuild.cpp">
+      <Filter>Eagle\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="src\Eagle\ImGui\ImGuiLayer.cpp">
       <Filter>Eagle\ImGui</Filter>
@@ -95,9 +92,6 @@
       <Filter>Eagle</Filter>
     </ClCompile>
     <ClCompile Include="src\EaglePCH.cpp" />
-    <ClCompile Include="src\Platforms\OpenGL\ImGuiOpenGLRenderer.cpp">
-      <Filter>Platforms\OpenGL</Filter>
-    </ClCompile>
     <ClCompile Include="src\Platforms\Windows\WindowsInput.cpp">
       <Filter>Platforms\Windows</Filter>
     </ClCompile>
