--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,17 +4,31 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=468,10
-Size=717,653
-Collapsed=0
-
-[Window][Example: Log]
-Pos=131,306
+Pos=292,172
 Size=649,405
 Collapsed=0
+DockId=0x00000001,1
+
+[Window][Example: Log]
+Pos=22,14
+Size=649,405
+Collapsed=0
+DockId=0x00000001,0
 
 [Window][Example: Console]
 Pos=60,60
 Size=520,600
 Collapsed=0
+
+[Window][DockSpace Demo]
+Size=1250,739
+Collapsed=0
+
+[Window][Test]
+Pos=0,0
+Size=44,48
+Collapsed=0
+
+[Docking][Data]
+DockNode  ID=0x00000001 Pos=681,607 Size=649,405 Selected=0xE927CF2F
 
