--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,16 +4,15 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=292,172
-Size=649,405
+Pos=964,6
+Size=280,434
 Collapsed=0
-DockId=0x00000001,1
 
 [Window][Example: Log]
 Pos=22,14
 Size=649,405
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x3BC79352,0
 
 [Window][Example: Console]
 Pos=60,60
@@ -21,14 +20,14 @@ Size=520,600
 Collapsed=0
 
 [Window][DockSpace Demo]
-Size=1250,739
+Size=1250,750
 Collapsed=0
 
 [Window][Test]
-Pos=0,0
+Pos=261,179
 Size=44,48
 Collapsed=0
 
 [Docking][Data]
-DockNode  ID=0x00000001 Pos=681,607 Size=649,405 Selected=0xE927CF2F
+DockSpace ID=0x3BC79352 Pos=253,102 Size=1250,731 CentralNode=1
 
