--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=964,6
+ViewportPos=1584,31
+ViewportId=0xE927CF2F
 Size=280,434
 Collapsed=0
 
