--- a/Eagle/Eagle.vcxproj.filters
+++ b/Eagle/Eagle.vcxproj.filters
@@ -100,6 +100,7 @@
     <ClInclude Include="src\Eagle\Rendering\RenderCommand.h" />
     <ClInclude Include="src\Platforms\OpenGL\OpenGLRenderAPI.h" />
     <ClInclude Include="src\Eagle\Rendering\Camera.h" />
+    <ClInclude Include="src\Eagle\Core\Time.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Eagle\Application.cpp">
