--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,8 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1584,31
-ViewportId=0xE927CF2F
+Pos=12,14
 Size=280,434
 Collapsed=0
 
