--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=12,14
+Pos=16,88
 Size=280,434
 Collapsed=0
 
@@ -26,6 +26,11 @@ Collapsed=0
 [Window][Test]
 Pos=261,179
 Size=44,48
+Collapsed=0
+
+[Window][Color editor window]
+Pos=12,16
+Size=390,60
 Collapsed=0
 
 [Docking][Data]
