--- a/Eagle/Eagle.vcxproj.filters
+++ b/Eagle/Eagle.vcxproj.filters
@@ -1407,6 +1407,7 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
+    <ClInclude Include="src\Eagle\Debug\Instrumentor.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Eagle\Components\CameraControler.cpp">
