Added support for subtextures

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -30,7 +30,17 @@ Collapsed=0
 
 [Window][Color editor window]
 Pos=20,14
-Size=436,535
+Size=364,204
+Collapsed=0
+
+[Window][Scene editor]
+Pos=3,7
+Size=353,195
+Collapsed=0
+
+[Window][Example window]
+Pos=10,6
+Size=353,211
 Collapsed=0
 
 [Docking][Data]
